<resources>
    <string name="app_name">GroupApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auto">ADD ENTRY</string>
    <string name="title_activity_display">VIEW ENTRIES</string>
    <string name="title_activity_statistics">VIEW STATISTCIS</string>
    <string name="button_save">SAVE</string>
    <string name="button_delete">DELETE ENTRY</string>
    <string name="enter_km">Enter Kilometers</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_ltr">Enter Liters</string>
    <string name="month_avg">MONTHLY AVERAGE</string>
    <string name="avg_gas">AVERAGE GASOLINE PURCHASED</string>
    <string name="avg_price">AVERAGE PRICE OF GAS</string>
    <string name="instructions">Version 1.0 By Alexis Small - Follow the \'Add Entry\' Button to add a gasoline purchase. Follow the \'View Entries\' to display a list of all entries by date. Clicking on the date will bring up
    details about that entry. From this screen you may delete entries. Follow the \'View Statistics\' to
    observe the average gasoline purchase and price for the dataset</string>


    <string name="food_nutrition_information_tracker">Food Nutrition information tracker</string>
    <string name="how_to_use_the_app">How to use the app: \n -Add a food item with the bottom button, then enter the name and a numerical value for the other fields. hit done to add the item \n
        -To edit an item click on the item in the list view to open a fragment containing the previuosly entered information and edit as you wish. Hit edit to confirm changes. \n
        -To delete an item click on the item in the list view and click on the delete button to remove it</string>
    <string name="oops">oops forgot to name the item</string>
    <string name="calories">Calories:</string>
    <string name="item_name">Item Name:</string>
    <string name="fat">Fat:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="protein">Protein:</string>
    <string name="done">done</string>
    <string name="date">Date:</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add_food">add food</string>
    <string name="total_protein">Total Protein</string>
    <string name="total_carbs">Total Carbs:</string>
    <string name="total_fat">Total fat:</string>
    <string name="daily_summary">Daily Summary</string>
    <string name="close">Close</string>
    <string name="statsUpdated">Stats updated</string>
    <string name="calperday">cal/day</string>
    <string name="avg">Avg:</string>
    <string name="recentday">Recent day:</string>
    <string name="changesSaved">Changes Saved</string>
    <string name="Nutritiontitle">Nutrition Tracker</string>
    <string name="about">about</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="swimming">Swimming</string>
    <string name="skating">Skating</string>
    <string name="chooseActivity">Choose an Activity:</string>
    <string name="howMany">How many minutes?:</string>
    <string name="enter">Enter</string>
    <string name="seeActivities">See all Activities</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="compare">Compare</string>
    <string name="deleteMessage">Delete Message</string>

    <string name="activityTrackerCreator">Created by Elie Massaad</string>
    <string name="step1">1. Select an activity from the list.</string>
    <string name="step2">2. Type  the number of minutes completed(Numbers only)</string>
    <string name="step3">3. Type a comment you may wan to save.</string>
    <string name="step4">4. Press the Enter Button to save the data</string>
    <string name="step5">5. Press see all activities to see the list view of all activities completed. You can click  on the activity to delete or modify.</string>
    <string name="step6">4. Press compare button to compare the amount of minutes by  month</string>

    <string name="T_app_name">Thermostat</string>
    <string name="T_NewRule">Add New Setting</string>
    <string name="T_Save">Save</string>
    <string name="T_SaveAsNew">Save As New</string>
    <string name="T_Delete">Delete</string>
    <string name="T_DeleteQuery">Do you want to delete this rule?</string>
    <string name="T_Cancel">Cancel</string>
    <string name="T_Temperature">Temperature ℃</string>
    <string name="T_Deleted">Thermostat Setting Deleted</string>
    <string name="T_Updated">Setting Updated</string>
    <string name="T_Added">Setting Added</string>
    <string name="T_About">About</string>
    <string name="T_Instructions">Instructions: Press ADD NEW SETTING to start creating a new temperature setting. Options for your new setting will appear. Select the time of day, day of the week, and temperature. When you are ready, press SAVE AS NEW. The new temperature setting will appear in the list. You can click on any setting in the list to see the options again. You can make any changes and save them by pressing SAVE, or press SAVE AS NEW to create another new setting. You can Also press DELETE, to delete the setting from the list.</string>
    <string name="T_Author">Created by: Alexander Mastropietro</string>
    <string name="T_Version">Version: 1.0</string>

</resources>
