<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ericpc.groupapp.ActivityTracker">


    <TextView
        android:id="@+id/textView"
        android:layout_width="144dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/chooseActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking"
            tools:layout_editor_absoluteX="237dp"
            tools:layout_editor_absoluteY="0dp"

            />

        <RadioButton
            android:id="@+id/radioBiking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biking"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="16dp"

            />

        <RadioButton
            android:id="@+id/radioSwimming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swimming"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="56dp" />

        <RadioButton
            android:id="@+id/radioSkating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skating"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="16dp"

            />

        <RadioButton
            android:id="@+id/radioRunning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"

            />
    </RadioGroup>


    <EditText
        android:id="@+id/enterMinutes"
        android:layout_width="193dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/minutes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="134dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="228dp"
        android:text="@string/howMany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="335dp"
        android:layout_height="120dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Add a Comment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enter"
        android:layout_width="89dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

</android.support.constraint.ConstraintLayout>
