<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ericpc.groupapp.AutoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/button_save"
            android:onClick="addData"/>

        <EditText
            android:id="@+id/enterKMET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonSubmit"
            android:hint="@string/enter_km"
            android:inputType="numberDecimal"/>


        <EditText
            android:id="@+id/enterPriceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/enterKMET"
            android:layout_gravity="center"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/enterLitersET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/enterPriceET"
            android:hint="@string/enter_ltr"
            android:inputType="numberDecimal"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:id="@+id/progressBar"
            android:layout_above="@id/enterLitersET"/>




    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>